--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,10 @@
         <div> <!--output-->
             <div>
                 <input onkeyup="searchData(this.value)" type="text" placeholder="Search" id="search" class="bg-[#111] p-2 rounded-[10px] outline-0 w-full mt-2">
-                <div class="flex flex-wrap gap-2">
-                    <button onclick="getSearchMood(this.id)" id="searchTitle" class=" mt-2 rounded-[15px] p-2 outline-0 border-0 cursor-pointer bg-[#470053] hover:bg-[#780f8b] grow">Search By Title</button>
-                    <button onclick="getSearchMood(this.id)" id="searchCategory" class=" mt-2 rounded-[15px] p-2 outline-0 border-0 cursor-pointer bg-[#470053] hover:bg-[#780f8b] grow">Search By Category</button>
-                </div>
+                <div class="flex flex-wrap gap-2 justify-between">
+                    <button onclick="getSearchMood('title')" class="mt-2 rounded-[15px] p-2 outline-0 border-0 cursor-pointer bg-[#470053] hover:bg-[#780f8b] grow">Search by Title</button>
+                    <button onclick="getSearchMood('category')" class="mt-2 rounded-[15px] p-2 outline-0 border-0 cursor-pointer bg-[#470053] hover:bg-[#780f8b] grow">Search by Category</button>
+
             </div>
         </div> <!--output-->
         <div id="deleteAll">
